--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,23 @@ body {
     left: calc(var(--x) * 1vw);
     transform: translate(-50%, -50%);
 }
+
+#mushroom {
+    --x: -20;
+    --y: -20;
+    height: 48px;
+    width: 48px;
+    position: absolute;
+    top: calc(var(--y)*1vh);
+    left: calc(var(--x)*1vw);
+}
+
+#mirror {
+    --x: -20;
+    --y: -20;
+    height: 48px;
+    width: 48px;
+    position: absolute;
+    top: calc(var(--y)*1vh);
+    left: calc(var(--x)*1vw);
+}
