--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,91 @@ body {
     padding: 0 1.5rem;
 }
 
+#welcome {
+    --welcome: "block";
+    --win: "none";
+    --lose: "none";
+    position: absolute;
+    top: 50vh;
+    right: 50vw;
+    width: 600px;
+    height: 400px;
+    transform: translateX(50%) translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: gray;
+    font-family: monospace;
+    padding: 2rem 4rem;
+    border: solid 5px #000;
+    border-radius: 10px;
+    & h2 {
+        color: white;
+        font-size: 1.8rem;
+        text-align: center;
+    }
+
+    & h4 {
+        color: white;
+        text-align: center;
+        font-size: 1.4rem;
+    }
+
+    & ul {
+        list-style-type: none;
+        list-style-position: outside;
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+
+        & li {
+            padding: 2rem;
+            color: white;
+            font-size: 1.2rem;
+            background-color: darkgray;
+        }
+
+        & li:hover {
+            background-color: rgb(60,60,60);
+            cursor: pointer;
+        }
+
+        & li:active {
+            background-color: rgb(50,50,50);
+            cursor: pointer;
+        }
+
+        & li:first-child {
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+        }
+
+        & li:last-child {
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+    }
+
+    & #welcome-header {
+        display: block;
+    }
+    & #win-header {
+        display: none;
+    }
+    & #lose-header {
+        display: none;
+    }
+
+
+}
+
+
+
 .paddle {
     --position : 50;
-    width: 1.5vh;
-    height: 10vh;
+    width: 2vh;
+    height: 14vh;
     background-color: var(--foreground-color);
     position: absolute;
     top: calc(var(--position) * 1vh)
